Fixed: wflow-consoleweb - App Center - Marketplace popup - popup header height too high ; overlapping slightly the nav bar. @7.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/v7.css
+++ b/wflow-consoleweb/src/main/webapp/css/v7.css
@@ -914,7 +914,7 @@ a.guider_button:hover {
 }
 .marketplaceAppHeader{
     background: #f0f0f0 !important;
-    height: 42px;
+    height: 35px;
 }
 #license-link {
     font-weight:bold;
